--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
 
+*.log
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion
 
