--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.4.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
