--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
+                <configuration>
+                    <configLocation>sun_checks.xml</configLocation>
+                </configuration>
             </plugin>
             <!-- Bug patterns -->
             <plugin>
